--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
